# SlapWin

./: .gitignore  Architecture.md  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
backend/: Cargo.toml  build.rs
backend/src/: lib.rs  main.rs
backend/src-tauri/: tauri.conf.json
backend/src/commands/: app.rs  license.rs
backend/src/system/: mac.rs
backend/src/utils/: license.rs  logger.rs  mod.rs
landing-page/: index.html  package-lock.json  package.json
landing-page/src/app/: layout.tsx  page.tsx
landing-page/src/components/: CTA.tsx  Navbar.tsx  StatsBar.tsx
src-frontend/: index.html  main.js  styles.css
src-tauri/: build.rs
src-tauri/capabilities/: default.json
src/app/app/: globals.css
src/app/components/: Features.tsx  Hero.tsx  HowItWorks.tsx  Trust.tsx  VoicePacks.tsx
src/commands/: mod.rs  system.rs
src/components/: CTA.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  StatsBar.tsx  Trust.tsx  VoicePacks.tsx
src/core/: state.rs
src/models/: adapter.rs  mod.rs
src/system/: helpers.rs  mac.rs  mod.rs
src/utils/: license.rs
