[package]
name = "slapwin"
version = "0.1.0"
description = "Lightweight Windows MAC address changer utility"
authors = ["SlapWin Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
simplelog = "0.12"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
is_elevated = "0.1"
runas = "1"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemInformation",
] }

[target.'cfg(not(windows))'.dependencies]
widestring = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
